fix overflow by target-user cards

--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -484,7 +484,7 @@ body.home .target-users .target-user.card {
   margin-bottom: 8px;
   margin-left: 8px;
   margin-right: 8px;
-  width: 100%;
+  flex-basis: 100%;
 }
 body.home .target-users .target-user.card .cool {
   min-height: 256px;
