--- a/styles/less/home.less
+++ b/styles/less/home.less
@@ -41,7 +41,7 @@ body.home {
 
     .target-user.card {
       .ma(@w-4);
-      width: 100%;
+      flex-basis: 100%;
 
       .cool {
         .min-size-hw(2 * @w-8);
